--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
 
     // For demonstration, login always "succeeds"
     alert("Login successful!");
-    window.location.href = "dashboard.log.html";
+    window.location.href = "dashboard _log.html";
   });
 </script>
 
