--- a/register.html
+++ b/register.html
@@ -121,7 +121,7 @@
 
     // If all validations pass
     alert("Registration Successful!");
-    window.location.href = "dashboard.log.html";
+    window.location.href = "dashboard _log.html";
   });
 </script>
 
