--- a/withdraw.html
+++ b/withdraw.html
@@ -60,74 +60,112 @@
 
 
 
-<div style="max-width:600px; margin:auto; background:#151540; padding:25px; border-radius:15px; box-shadow:0 0 10px #00ffff80; color:#fff; font-family:sans-serif;">
-  <h2 style="text-align:center; color:#00ffff;">Withdraw Funds</h2>
-  <p style="text-align:center; color:#ffcc00;">Choose your country and preferred withdrawal method</p>
+div style="max-width:600px; margin:auto; background:#18184a; padding:25px; border-radius:15px; box-shadow:0 0 15px #00ffff55;">
+    <h2 style="text-align:center; color:#00ffff;">Withdraw Funds</h2>
+    <p style="text-align:center; color:#ffaa00;">Select your country and complete your local withdrawal form</p>
 
-  <form onsubmit="event.preventDefault(); withdrawNow();" style="margin-top:20px;">
-    <label style="display:block; margin-bottom:10px;">Select Country:</label>
-    <select id="country" onchange="updateMethod()" required style="width:100%; padding:10px; background:#1e1e3f; color:#fff; border:none; border-radius:8px; margin-bottom:20px;">
-      <option value="">-- Select your country --</option>
-      <option value="nigeria">Nigeria</option>
-      <option value="ghana">Ghana</option>
-      <option value="kenya">Kenya</option>
-      <option value="southafrica">South Africa</option>
-      <option value="liberia">Liberia</option>
-      <option value="senegal">Senegal</option>
-      <option value="cameroon">Cameroon</option>
-      <option value="uganda">Uganda</option>
-      <option value="tanzania">Tanzania</option>
-      <option value="zambia">Zambia</option>
-    </select>
+    <form onsubmit="event.preventDefault(); withdrawNow();" style="margin-top:20px;">
+      <label style="display:block; margin-bottom:10px;">Choose Country:</label>
+      <select id="country" onchange="loadForm()" required style="width:100%; padding:10px; background:#1d1d3f; color:#fff; border:none; border-radius:8px; margin-bottom:20px;">
+        <option value="">-- Select Country --</option>
+        <option value="nigeria">Nigeria</option>
+        <option value="ghana">Ghana</option>
+        <option value="kenya">Kenya</option>
+        <option value="southafrica">South Africa</option>
+        <option value="liberia">Liberia</option>
+        <option value="senegal">Senegal</option>
+        <option value="cameroon">Cameroon</option>
+        <option value="uganda">Uganda</option>
+        <option value="tanzania">Tanzania</option>
+        <option value="zambia">Zambia</option>
+      </select>
 
-    <div id="methodFields"></div>
+      <div id="formFields"></div>
 
-    <label style="display:block; margin-top:20px;">Amount ($):</label>
-    <input type="number" required placeholder="Minimum $100" style="width:100%; padding:10px; background:#1e1e3f; color:#fff; border:none; border-radius:8px; margin-bottom:20px;" />
+      <label style="display:block; margin-top:20px;">Withdraw Amount ($):</label>
+      <input type="number" required placeholder="Minimum $100" style="width:100%; padding:10px; background:#1e1e3f; color:#fff; border:none; border-radius:8px;" />
 
-    <button id="withdrawBtn" style="width:100%; padding:12px; font-weight:bold; font-size:1rem; color:#00ffff; background:transparent; border:2px solid #00ffff; border-radius:30px; cursor:pointer;">
-      Withdraw Now
-    </button>
-  </form>
-</div>
+      <button id="withdrawBtn" style="width:100%; padding:12px; font-weight:bold; font-size:1rem; color:#00ffff; background:transparent; border:2px solid #00ffff; border-radius:30px; cursor:pointer; margin-top:20px;">
+        Withdraw Now
+      </button>
+    </form>
+  </div>
 
-<script>
-  function updateMethod() {
-    const country = document.getElementById("country").value;
-    const container = document.getElementById("methodFields");
-    let html = '';
+  <script>
+    function loadForm() {
+      const c = document.getElementById("country").value;
+      const field = document.getElementById("formFields");
+      let form = "";
 
-    const methods = {
-      nigeria: '<label>Bank Name:</label><input type="text" placeholder="e.g. Access Bank" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;margin-bottom:10px;" /><label>Account Number:</label><input type="text" placeholder="Enter Account Number" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      ghana: '<label>Mobile Money Number:</label><input type="text" placeholder="e.g. 024xxxxxxx" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      kenya: '<label>M-PESA Number:</label><input type="text" placeholder="e.g. 0712xxxxxx" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      southafrica: '<label>Bank Account Number:</label><input type="text" placeholder="e.g. 1234567890" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" /><label>Bank Name:</label><input type="text" placeholder="e.g. Capitec" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      liberia: '<label>Mobile Money (Lonestar/Orange):</label><input type="text" placeholder="e.g. 077xxxxxxx" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      senegal: '<label>Wave/MoMo Number:</label><input type="text" placeholder="e.g. 77xxxxxxx" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      cameroon: '<label>MTN MoMo Number:</label><input type="text" placeholder="e.g. 679xxxxxx" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      uganda: '<label>Airtel Money/MTN:</label><input type="text" placeholder="e.g. 070xxxxxxx" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      tanzania: '<label>TigoPesa/Airtel Money:</label><input type="text" placeholder="e.g. 065xxxxxxx" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-      zambia: '<label>Airtel/Telco Number:</label><input type="text" placeholder="e.g. 097xxxxxxx" required style="width:100%;padding:10px;background:#1e1e3f;color:#fff;border:none;border-radius:8px;" />',
-    };
+      const inputs = {
+        nigeria: `
+          <label>Bank Name:</label><input type="text" placeholder="Access, Zenith..." required style="${s()}" />
+          <label>Account Number:</label><input type="text" placeholder="10-digit NUBAN" required style="${s()}" />
+          <label>Account Name:</label><input type="text" placeholder="Your full name" required style="${s()}" />
+        `,
+        ghana: `
+          <label>Mobile Money Number:</label><input type="text" placeholder="024xxxxxxx" required style="${s()}" />
+          <label>Network:</label><input type="text" placeholder="MTN, Vodafone, etc" required style="${s()}" />
+        `,
+        kenya: `
+          <label>M-PESA Number:</label><input type="text" placeholder="07xxxxxxxx" required style="${s()}" />
+          <label>Account Name:</label><input type="text" placeholder="Your registered name" required style="${s()}" />
+        `,
+        southafrica: `
+          <label>Bank Name:</label><input type="text" placeholder="Capitec, FNB, etc" required style="${s()}" />
+          <label>Account Number:</label><input type="text" placeholder="1234567890" required style="${s()}" />
+          <label>Account Type:</label><input type="text" placeholder="Savings / Cheque" required style="${s()}" />
+        `,
+        liberia: `
+          <label>Mobile Money Number:</label><input type="text" placeholder="077xxxxxxx" required style="${s()}" />
+          <label>Network:</label><input type="text" placeholder="Lonestar / Orange" required style="${s()}" />
+        `,
+        senegal: `
+          <label>MoMo/Wave Number:</label><input type="text" placeholder="77xxxxxxx" required style="${s()}" />
+          <label>Network:</label><input type="text" placeholder="Orange Money / Wave" required style="${s()}" />
+        `,
+        cameroon: `
+          <label>MTN MoMo Number:</label><input type="text" placeholder="679xxxxxx" required style="${s()}" />
+          <label>Account Name:</label><input type="text" placeholder="Registered name" required style="${s()}" />
+        `,
+        uganda: `
+          <label>Mobile Number:</label><input type="text" placeholder="070xxxxxxx" required style="${s()}" />
+          <label>Network:</label><input type="text" placeholder="MTN / Airtel" required style="${s()}" />
+        `,
+        tanzania: `
+          <label>Mobile Wallet Number:</label><input type="text" placeholder="065xxxxxxx" required style="${s()}" />
+          <label>Network:</label><input type="text" placeholder="TigoPesa, Airtel Money" required style="${s()}" />
+        `,
+        zambia: `
+          <label>Mobile Money Number:</label><input type="text" placeholder="097xxxxxxx" required style="${s()}" />
+          <label>Network:</label><input type="text" placeholder="Airtel, MTN" required style="${s()}" />
+        `,
+      };
 
-    html = methods[country] || '';
-    container.innerHTML = html;
-  }
+      form = inputs[c] || "";
+      field.innerHTML = form;
+    }
 
-  function withdrawNow() {
-    const btn = document.getElementById('withdrawBtn');
-    btn.innerHTML = '<span style="width:18px;height:18px;border:3px solid #00ffff;border-top-color:transparent;border-radius:50%;display:inline-block;animation:spin 1s linear infinite;"></span>';
-    btn.disabled = true;
+    function withdrawNow() {
+      const btn = document.getElementById("withdrawBtn");
+      btn.innerHTML = `<span style="width:18px;height:18px;border:3px solid #00ffff;border-top-color:transparent;border-radius:50%;display:inline-block;animation:spin 1s linear infinite;"></span> Processing...`;
+      btn.disabled = true;
 
-    setTimeout(() => {
-      btn.innerHTML = 'Processing...';
-    }, 2000);
-  }
+      setTimeout(() => {
+        btn.innerHTML = "✅ Payment not confirmed yet";
+        btn.disabled = false;
+      }, 4000);
+    }
 
-  const style = document.createElement('style');
-  style.innerHTML = `@keyframes spin { to { transform: rotate(360deg); } }`;
-  document.head.appendChild(style);
-</script>
+    function s() {
+      return "width:100%; padding:10px; background:#1e1e3f; color:#fff; border:none; border-radius:8px; margin-bottom:15px;";
+    }
+
+    const style = document.createElement("style");
+    style.innerHTML = `@keyframes spin { to { transform: rotate(360deg); } }`;
+    document.head.appendChild(style);
+  </script>
+</body>
 
 
 
