--- a/deposit.html
+++ b/deposit.html
@@ -2,48 +2,222 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Crypto Deposit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>| I N P U T | - :: C R Y P T O D E P O S I T ::</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <style>
+    /* Global Terminal/AI Variables */
+    :root {
+      --color-primary: #00ff41; /* Neon Green */
+      --color-secondary: #008823; /* Darker Green */
+      --color-background: #080808; /* Deep Space Black */
+      --color-surface: #1a1a1a; /* Dark Surface */
+      --color-text-main: #00ff41;
+      --color-text-dim: #555555;
+      --color-warning: #ff0000;
+      --color-accent: #ffc107; /* Yellow/Gold for "Paid" button */
+      --font-mono: 'Consolas', 'Courier New', monospace;
+    }
+
+    body {
+      margin: 0;
+      font-family: var(--font-mono);
+      background-color: var(--color-background);
+      color: var(--color-text-main);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 10px;
+    }
+    
+    /* Utility Classes */
+    .text-scan { text-shadow: 0 0 5px var(--color-primary); }
+    .border-robot { border: 1px dashed var(--color-secondary); }
+
+    /* Header/Title */
+    .terminal-title {
+        color: var(--color-primary);
+        font-size: 1.8rem;
+        margin-bottom: 25px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        border-bottom: 2px solid var(--color-primary);
+        padding-bottom: 5px;
+        font-weight: bold;
+    }
+
+    /* Select Input */
+    #cryptoSelect {
+        padding: 10px 20px;
+        border-radius: 0;
+        background: var(--color-surface);
+        color: var(--color-primary);
+        border: 1px solid var(--color-secondary);
+        font-size: 1rem;
+        margin-bottom: 35px;
+        cursor: pointer;
+        box-shadow: 0 0 5px rgba(0, 255, 65, 0.3);
+    }
+    #cryptoSelect option {
+        background: var(--color-background);
+        color: var(--color-primary);
+    }
+
+    /* Address Container */
+    #addressContainer {
+        background: var(--color-surface);
+        padding: 25px;
+        border-radius: 0;
+        width: 100%;
+        max-width: 600px;
+        text-align: center;
+        border: 2px solid var(--color-primary);
+        box-shadow: 0 0 15px rgba(0, 255, 65, 0.5);
+    }
+    .address-display {
+        word-break: break-all;
+        font-size: 1rem;
+        margin-bottom: 15px;
+        color: var(--color-accent); /* Highlight address value */
+        background: #0d0d0d;
+        padding: 10px;
+        border: 1px solid var(--color-secondary);
+    }
+
+    /* Copy Button */
+    .btn-copy {
+        padding: 8px 20px;
+        background: var(--color-secondary);
+        color: var(--color-background);
+        border: 1px solid var(--color-primary);
+        border-radius: 0;
+        cursor: pointer;
+        font-weight: bold;
+        transition: all 0.2s;
+        text-transform: uppercase;
+    }
+    .btn-copy:hover {
+        background: var(--color-primary);
+        color: var(--color-background);
+    }
+    
+    /* Pay Button */
+    #payBtn {
+        margin-top: 40px;
+        padding: 12px 30px;
+        font-size: 1rem;
+        background: var(--color-accent);
+        color: var(--color-background);
+        border: 2px solid var(--color-accent);
+        border-radius: 0;
+        cursor: pointer;
+        font-weight: bold;
+        transition: all 0.3s;
+        text-transform: uppercase;
+        box-shadow: 0 0 10px var(--color-accent);
+    }
+    #payBtn:hover {
+        background: #e0ac00;
+        box-shadow: 0 0 15px var(--color-accent);
+    }
+    #payBtn:disabled {
+        background: var(--color-text-dim);
+        color: var(--color-background);
+        border-color: var(--color-text-dim);
+        box-shadow: none;
+        cursor: not-allowed;
+    }
+
+    /* Payment Status */
+    #paymentStatus {
+        margin-top: 20px;
+        font-size: 1rem;
+        color: var(--color-warning);
+        font-weight: bold;
+        text-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
+    }
+
+    /* Instructions Box */
+    .instructions-box {
+        margin-top: 40px;
+        background: var(--color-surface);
+        padding: 25px;
+        border-radius: 0;
+        max-width: 700px;
+        width: 100%;
+        color: #cccccc;
+        font-size: 0.95rem;
+        line-height: 1.5;
+        border: 1px dashed var(--color-secondary);
+    }
+    .instructions-box h2 {
+        color: var(--color-primary);
+        font-size: 1.3rem;
+        margin-bottom: 10px;
+        border-bottom: 1px dashed var(--color-secondary);
+        padding-bottom: 5px;
+    }
+    .instructions-box strong {
+        color: var(--color-primary);
+    }
+    .note-warning {
+        margin-top: 15px;
+        color: var(--color-warning);
+    }
+  </style>
 </head>
-<body style="margin:0; font-family:Arial, sans-serif; background-color:#0e0e2c; color:#eee; display:flex; flex-direction:column; align-items:center; padding:40px;">
+<body>
 
-  <h1 style="color:#00ffff; font-size:2rem; margin-bottom:20px;">Select Crypto to Deposit</h1>
+  <h1 class="terminal-title">// INITIATE DEPOSIT PROTOCOL //</h1>
 
-  <select id="cryptoSelect" onchange="showAddress()" style="padding:10px 20px; border-radius:8px; background:#101032; color:#fff; border:none; font-size:1rem; margin-bottom:30px;">
-    <option value="">-- Choose Cryptocurrency --</option>
-    <option value="btc">Bitcoin (BTC)</option>
-    <option value="pi">Pi Network</option>
-    <option value="usdt">USDT (TRC20)</option>
-    <option value="eth">Ethereum (ERC20)</option>
+  <select id="cryptoSelect" onchange="showAddress()">
+    <option value="">-- SELECT CRYPTO NODE --</option>
+    <option value="btc">Bitcoin (BTC) // NODE 01</option>
+    <option value="pi">Pi Network // NODE 02</option>
+    <option value="usdt">USDT (TRC20) // NODE 03</option>
+    <option value="eth">Ethereum (ERC20) // NODE 04</option>
   </select>
 
-  <div id="addressContainer" style="display:none; background:#1a1a3d; padding:20px; border-radius:12px; width:90%; max-width:600px; text-align:center; box-shadow:0 0 10px #00ffff;">
-    <h2 id="cryptoName" style="color:#00ffff; margin-bottom:10px;"></h2>
-    <p id="cryptoAddress" style="word-break:break-all; font-size:1.1rem; margin-bottom:15px;"></p>
-    <button onclick="copyAddress()" style="padding:10px 20px; background:#00ffff; color:#000; border:none; border-radius:6px; cursor:pointer;">Copy Address</button>
+  <div id="addressContainer" style="display:none;">
+    <h2 id="cryptoName" class="text-scan"></h2>
+    <p id="cryptoAddress" class="address-display"></p>
+    <button onclick="copyAddress()" class="btn-copy">
+        <i class="fas fa-clipboard"></i> COPY ADDRESS TO BUFFER
+    </button>
   </div>
 
-  <button onclick="handlePayment()" id="payBtn" style="margin-top:40px; padding:12px 25px; font-size:1rem; background:#ffcc00; color:#000; border:none; border-radius:8px; cursor:pointer;">
-    I have paid
+  <button onclick="handlePayment()" id="payBtn">
+    TRANSFER CONFIRMATION: I HAVE PAID
   </button>
 
-  <p id="paymentStatus" style="margin-top:20px; font-size:1.1rem;"></p>
+  <p id="paymentStatus"></p>
+
+  <div class="instructions-box">
+    <h2><i class="fas fa-exclamation-triangle"></i> :: DEPOSIT PARAMETERS ::</h2>
+    <p>Please select your preferred cryptocurrency above, copy the corresponding wallet address, and transmit your funds. After successful transmission, click the **TRANSFER CONFIRMATION** button to begin the network verification sweep.</p>
+    <p><strong><i class="fas fa-coins"></i> MINIMUM INPUT:</strong> $100<br>
+    <strong><i class="fas fa-hourglass-half"></i> CONFIRMATION TIME:</strong> $\approx$ 30 minutes (NETWORK DEPENDENT)</p>
+    <p>If your payment is not confirmed, contact <strong class="text-scan">SUPPORT_ENTITY</strong> immediately with your transaction ID and proof-of-transfer log.</p>
+    <p class="note-warning"><strong><i class="fas fa-shield-alt"></i> SECURITY PROTOCOL:</strong> Always verify the generated wallet address. Funds sent to an erroneous address are unrecoverable.</p>
+  </div>
 
   <script>
     const addresses = {
       btc: {
-        name: "Bitcoin (BTC) Address",
+        name: "// BTC WALLET ADDRESS //",
         value: "3BfoU2qv6ytuAb6XFQGxwUBUJETaV75hEi"
       },
       pi: {
-        name: "Pi Network Address",
+        name: "// PI NETWORK WALLET ADDRESS //",
         value: "MDJYPX7HSZ5XZYNBJIWV6KCVV6RGMCDUBH3FTJL22TOGPNFQI6LN2AAAAAAAACYE4UUN4"
       },
       usdt: {
-        name: "USDT (TRC20) Address",
+        name: "// USDT (TRC20) WALLET ADDRESS //",
         value: "TB4YyUMmFV8NK1GqZyWkENNPAkPbDf7sCv"
       },
       eth: {
-        name: "Ethereum (ERC20) Address",
+        name: "// ETHEREUM (ERC20) WALLET ADDRESS //",
         value: "0x272691b6300a719fd1d8e7524f4c28fade078243"
       }
     };
@@ -64,7 +238,7 @@
     function copyAddress() {
       const text = document.getElementById('cryptoAddress').innerText;
       navigator.clipboard.writeText(text).then(() => {
-        alert("Address copied to clipboard!");
+        alert("ADDRESS COPIED TO BUFFER.");
       });
     }
 
@@ -72,27 +246,15 @@
       const btn = document.getElementById('payBtn');
       const status = document.getElementById('paymentStatus');
 
-      btn.innerHTML = "⭮ Verifying...";
+      btn.innerHTML = "<i class='fas fa-sync fa-spin'></i> VERIFICATION SWEEP INITIATED...";
       btn.disabled = true;
 
       setTimeout(() => {
-        status.innerText = "⚠️ Payment not confirmed yet";
-        btn.innerHTML = "I have paid";
+        status.innerHTML = "⚠️ WARNING: PAYMENT NOT CONFIRMED. WAITING FOR NETWORK SYNC.";
+        btn.innerHTML = "TRANSFER CONFIRMATION: I HAVE PAID";
         btn.disabled = false;
       }, 3000); // Simulates confirmation delay
     }
-  </script><br><b>
-
-
-
-<div style="margin-top:40px; background:#111138; padding:20px; border-radius:10px; max-width:700px; width:90%; color:#ccc; font-size:1rem; line-height:1.6;">
-  <h2 style="color:#00ffff; font-size:1.5rem; margin-bottom:10px;">Important Deposit Instructions</h2>
-  <p>Please select your preferred cryptocurrency above, copy the corresponding wallet address, and make your payment. Once you've made the transfer, click the <strong>"I have paid"</strong> button to begin the verification process.</p>
-  <p><strong>Minimum deposit:</strong> $100<br>
-  <strong>Confirmation time:</strong> Within 30 minutes (depending on network traffic)</p>
-  <p>If your payment is not confirmed within the expected timeframe, please contact support immediately with your transaction ID and screenshot.</p>
-  <p style="margin-top:10px;"><strong>Note:</strong> Always double-check the wallet address before sending your payment. We are not responsible for funds sent to the wrong address.</p>
-</div>
-
+  </script>
 </body>
 </html>
